--- a/src/pages/ContactUs/styles.scss
+++ b/src/pages/ContactUs/styles.scss
@@ -20,7 +20,7 @@
             color: var(--text-color);
             font-weight: bolder;
             overflow: hidden;
-            padding: 1% 0% 2% 0%;
+            padding: 1% 0% 1% 0%;
             
             @media (min-width: 768px) {
                 font-size: 2.5rem;
